--- a/frontend/templates/themes_admin/edit_user.html
+++ b/frontend/templates/themes_admin/edit_user.html
@@ -24,9 +24,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstr
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
-                        Edit User
+                        Modifier
                         <a href="user_list.html"><button type="button" class="btn btn-list">
-                                <i class="fa fa-align-justify"></i>&nbsp; User List</button>
+                                <i class="fa fa-align-justify"></i>&nbsp; Liste d'utilisateur</button>
                         </a>
                     </div>
                 </div>
