--- a/frontend/templates/themes_admin/my_profile.html
+++ b/frontend/templates/themes_admin/my_profile.html
@@ -33,7 +33,7 @@
                                         <td class="text-right">{{ numero }}</td>
                                     </tr>
                                     <tr>
-                                        <td class="text-left">Address </td>
+                                        <td class="text-left">Adresse </td>
                                         <td class="text-right">{{ adresse }}</td>
                                     </tr>
                                 </tbody>
