--- a/frontend/templates/themes_admin/show_details.html
+++ b/frontend/templates/themes_admin/show_details.html
@@ -19,8 +19,8 @@
                         
                     </div>
                     <div class="p-2 bd-highlight">
-                        <a href="{% url 'medicine_grid' %}"><button type="button" class="btn btn-list"><i class="fa fa-th"></i> &nbsp;Grid View</button></a>
-                        <a href="{% url 'creation_medicament' %}"><button type="button" class="btn btn-list"><i class="fa fa-plus-square-o"></i> &nbsp;Add Medicine</button></a>
+                        <a href="{% url 'medicine_grid' %}"><button type="button" class="btn btn-list"><i class="fa fa-th"></i> &nbsp;Vue en Grille</button></a>
+                        <a href="{% url 'creation_medicament' %}"><button type="button" class="btn btn-list"><i class="fa fa-plus-square-o"></i> &nbsp;Ajout de médicaments</button></a>
                     </div>
                 </div>
                 <div class="card-body">
