--- a/frontend/templates/themes_admin/themes_caissier/medicine_select.html
+++ b/frontend/templates/themes_admin/themes_caissier/medicine_select.html
@@ -153,7 +153,7 @@
 
 <div class="med-container">
     {% for selection in non_validated_medicines %}
-    <h2 class="section-title"> Commande No {{ selection.id }}</h2>
+    <h2 class="section-title"> Commande N° {{ selection.id }}</h2>
     <table class="med-table" id="table-{{ selection.id }}">
         <thead>
             <tr>
