--- a/frontend/templates/themes_admin/add_category.html
+++ b/frontend/templates/themes_admin/add_category.html
@@ -39,7 +39,7 @@
             <div class="sidebar-logo" id="sidebar-logo">
                 <a href="#">
                     <div class="row">
-                        <i class="fas fa-laptop-medical"></i>
+                        <img src="{% static 'themes_admin/img/logo.png' %}" width="90" height="90">
                         <h3>PharmApp</h3>
                     </div>
                 </a>
@@ -190,7 +190,7 @@
                             </div>
                             <li class="divider"></li>
                             <div class="notification-footer">
-                                <h4 class="menu-title">View all<i class="glyphicon glyphicon-circle-arrow-right"></i>
+                                <h4 class="menu-title">Tout voir<i class="glyphicon glyphicon-circle-arrow-right"></i>
                                 </h4>
                             </div>
                         </ul>
@@ -236,7 +236,7 @@
                                                 <i class="fas fa-edit" id="fa-edit"></i>
                                             </div>
                                             <div class="p-user">
-                                                <p>Edit Profile</p>
+                                                <p>Modifier mon profil</p>
                                             </div>
                                         </div>
                                     </div>
@@ -250,7 +250,7 @@
                                                 <i class="fa fa-sign-out" id="fa-sign"></i>
                                             </div>
                                             <div class="p-user">
-                                                <p>Sign Out</p>
+                                                <p>Se Déconnecter</p>
                                             </div>
                                         </div>
                                     </div>
