--- a/frontend/templates/themes_admin/homepage_prepa.html
+++ b/frontend/templates/themes_admin/homepage_prepa.html
@@ -1,5 +1,68 @@
 {% extends "themes_admin/add_category.html" %}
 {% block content %}
+{% load static %}
+<style>
+    body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        font-family: Arial, sans-serif;
+    }
 
+    .background {
+        background-image: url('{% static "themes_admin/img/Back2.jpg" %}');
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 100vh; /* Full viewport height */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+
+    .centered-text {
+        color: white;
+        font-size: 64px;
+        font-weight: bold;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        text-align: center;
+    }
+
+    .content-container {
+        max-width: 800px;
+        padding: 20px;
+        background: rgba(255, 255, 255, 0.8);
+        border-radius: 10px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        margin-top: 20px;
+    }
+
+    .title {
+        font-size: 36px;
+        color: #333;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .description {
+        font-size: 18px;
+        color: #666;
+        line-height: 1.6;
+        text-align: center;
+    }
+</style>
+
+<div class="background">
+    <div class="centered-text">Bienvenue Mr/Mme/Mlle</div>
+</div>
+
+<div class="content-container mx-auto mt-4">
+    <h2 class="title">Bienvenue à PharmApp</h2>
+    <p class="description">
+        Découvrez notre large gamme de médicaments et profitez de nos services de santé en ligne. Chez PharmApp, nous nous engageons à vous fournir les meilleurs produits et conseils pour votre bien-être.
+    </p>
+</div>
 
 {% endblock content %}
