--- a/frontend/templates/themes_admin/themes_caissier/homepage_car.html
+++ b/frontend/templates/themes_admin/themes_caissier/homepage_car.html
@@ -39,7 +39,7 @@
             <div class="sidebar-logo" id="sidebar-logo">
                 <a href="#">
                     <div class="row">
-                        <i class="fas fa-laptop-medical"></i>
+                        <img src="{% static 'themes_admin/img/logo.png' %}" width="90" height="90">
                         <h3>PharmApp</h3>
                     </div>
                 </a>
@@ -248,7 +248,7 @@
                                                 <i class="fa fa-sign-out" id="fa-sign"></i>
                                             </div>
                                             <div class="p-user">
-                                                <p>Sign Out</p>
+                                                <p>Déconnecter</p>
                                             </div>
                                         </div>
                                     </div>
