--- a/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
@@ -90,7 +90,7 @@
             <div class="sidebar-logo" id="sidebar-logo">
                 <a href="#">
                     <div class="row">
-                        <i class="fas fa-laptop-medical"></i>
+                        <img src="{% static 'themes_admin/img/logo.png' %}" width="90" height="90">
                         <h3>PharmApp</h3>
                     </div>
                 </a>
