--- a/frontend/static/themes_admin/css/login.css
+++ b/frontend/static/themes_admin/css/login.css
@@ -35,10 +35,10 @@
 button[type="submit"].btn.btn-info {
     width: 40%; /* Prendre toute la largeur */
     padding: 15px; /* Espacement interne */
-    font-size: 10px; /* Taille de la police */
+    font-size: 13px; /* Taille de la police */
     border-radius: 4px; /* Bords arrondis */
     margin-left: 60px;
-    background-color: #03BB00;
+    background-color: #059003;
 }
 
 .login p {
