--- a/frontend/templates/themes_admin/login.html
+++ b/frontend/templates/themes_admin/login.html
@@ -70,10 +70,11 @@
 
         .btn-info {
             border-radius: 0.25rem;
-            font-size: 0.875rem; /* Taille de la police réduite */
+            font-size: 1.8rem; /* Taille de la police réduite */
             padding: 0.5rem 1rem; /* Padding réduit */
             text-transform: uppercase;
             margin-left: 35px; /* Déplacer le bouton légèrement vers la gauche */
+            font-weight: bold;
         }
 
         .img-thumbnail {
