--- a/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/medicine_list.html
@@ -181,7 +181,7 @@
                             <button class="btn btn-link btn-block text-left collapsed" type="button"
                                 data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
                                 aria-controls="collapseFour">
-                                <a class="option-name"><i class="fas fa-capsules"></i><span
+                                <a class="option-name"><i class="fas fas fa-box"></i><span
                                         style="margin-left:4px;">Commandes</span></a>
                             </button>
                         </h2>
